--- a/game-store/public/index.html
+++ b/game-store/public/index.html
@@ -3,17 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-   
-    <title>Game Store</title>
+    <title>Gaming Website | React App</title>
   </head>
   <body>
     <div id="root"></div>
